--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,22 +1,20 @@
-name: update-flake-lock
+name: Bump flake.lock
 on:
-    workflow_dispatch: null
-    schedule:
-      - cron: 0 6 * * *
+  schedule:
+    - cron: 0 6 * * *
+  workflow_dispatch: null
 jobs:
-  lockfile:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: @actions/checkout@v4
-      - name: Install Nix
-        uses: cachix/install-nix-action@v26
-      - name: Update flake
-        run: nix flake update
-      - name: Commit Update
-        uses: stefanzweifel/git-auto-commit-action@v5
+      - uses: actions/checkout@v4
         with:
-          commit_message: "bump flake.lock"
+          fetch-depth: 0
+      - uses: cachix/install-nix-action@v26
+      - run: nix flake update
+      - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "chore: bump flake.lock"
           commit_user_name: Flake Bot
           commit_options: --no-verify --signoff
           commit_author: Flake Bot <actions@github.com>
